--- a/develop-phase/app/dark.css
+++ b/develop-phase/app/dark.css
@@ -17,11 +17,11 @@ fieldset { border:none; }
 legend { margin-bottom:20px;margin-top:10px;font-family:'Gotham',sans-serif;font-weight:500; }
 label { display:block;margin-bottom:4px;font-size:20px;font-family:'Gotham',sans-serif;font-weight:500; }
 textarea { min-height:150px; }
-input[type="text"], input[type="date"], input[type="password"], input[type="datetime"], input[type="email"], input[type="number"], input[type="search"], input[type="time"], .input[type="url"], textarea, select { border:none;border-radius:10px;font-size:18px;margin:0;outline:0;padding:15px;width:100%;box-sizing:border-box;font-family:'Arvo',serif;background:rgba(255,255,255,0.2);color:#000;margin-bottom:30px; }
-input[type="text"]:focus, input[type="password"]:focus, input[type="date"]:focus, input[type="datetime"]:focus, input[type="email"]:focus, input[type="number"]:focus, input[type="search"]:focus, input[type="time"]:focus, input[type="url"]:focus, textarea:focus, select:focus{ background:rgba(255,255,255,0.1); }
+input[type="text"], input[type="date"], input[type="password"], input[type="datetime"], input[type="email"], input[type="number"], input[type="search"], input[type="time"], .input[type="url"], textarea, select { border:none;border-radius:10px;font-size:18px;margin:0;outline:0;padding:15px;width:100%;box-sizing:border-box;font-family:'Arvo',serif;background:rgba(0,0,0,0.2);color:#fff;margin-bottom:30px; }
+input[type="text"]:focus, input[type="password"]:focus, input[type="date"]:focus, input[type="datetime"]:focus, input[type="email"]:focus, input[type="number"]:focus, input[type="search"]:focus, input[type="time"]:focus, input[type="url"]:focus, textarea:focus, select:focus{ background:rgba(0,0,0,0.1); }
 select { -webkit-appearance:menulist-button;height:55px; }
 button[type="submit"], input[type="button"] {
-    position:relative;display:block;padding:12px 32px 12px 32px;color:#000;margin:0 auto;background:rgba(255,255,255,0.75);font-size:18px;border:none;text-align:center;width:100%;margin-bottom:10px;border-radius:999px;font-family:'Gotham',sans-serif;font-weight:bold; }
+    position:relative;display:block;padding:12px 32px 12px 32px;color:#fff;margin:0 auto;background:rgba(0,0,0,0.75);font-size:18px;border:none;text-align:center;width:100%;margin-bottom:10px;border-radius:999px;font-family:'Gotham',sans-serif;font-weight:bold; }
 :focus, button:hover, input:hover, button:focus, input:focus, textarea:hover, textarea:focus { outline:4px solid;animation:outline-color-cycle-l-d 2s infinite; }
 @keyframes outline-color-cycle-l-d { 0% {outline-color: #54CFF8} 50% {outline-color: #333} 100% {outline-color: #54CFF8} }
 a, span { text-decoration:none;color:inherit; }
